# mapx

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: auto-update-qa.md  entity-crud-matrix.md  features-v1.md  issue-quality-gate.md  product-spec-v1.md  release.md  workspace-visual-smoke.md
docs/spikes/: baidu-distance-tool.md  baidu-map-webview-origin.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_bootstrap.sql  0002_core_schema.sql  0003_measurements.sql
src-tauri/src/: backup.rs  cities.rs  db.rs  errors.rs  lib.rs  logging.rs  main.rs  markers.rs  measurements.rs  projects.rs  settings.rs  tags.rs  taxonomy.rs  validation.rs
src/actions/: workspace-shortcuts.test.ts  workspace-shortcuts.ts
src/components/: category-management-panel.tsx  first-launch-flow.tsx  map-canvas.tsx  marker-detail-panel.tsx  marker-list-panel.tsx  marker-overview-panel.tsx  search-panel.tsx  settings-panel.tsx  tag-management-panel.tsx  update-dialog.tsx
src/data/: china-cities.test.ts  china-cities.ts
src/hooks/: use-workspace-action-events.ts
tools/: build-tauri-release.mjs  build-updater-manifest.mjs  capture-baidu-map-domains.mjs  create-updater-fragment.mjs  create-updater-latest-json.mjs  create-updater-latest-json.test.mjs  distance-tool-smoke.mjs  e2e-smoke.mjs  updater-manifest.test.mjs  verify-release-version.mjs
(+72 files in other folders)
